star-trek-quiz-template.yaml
---
# Source: star-trek-quiz/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: star-trek-quiz-star-trek-quiz
  labels:
    app.kubernetes.io/name: star-trek-quiz
    app.kubernetes.io/instance: star-trek-quiz
    app.kubernetes.io/managed-by: Helm

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: star-trek-quiz
    app.kubernetes.io/instance: star-trek-quiz

  ports:
    - name: http
      port: 5001
      targetPort: 5001
      protocol: TCP
---
# Source: star-trek-quiz/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: star-trek-quiz-star-trek-quiz
  labels:
    app.kubernetes.io/name: star-trek-quiz
    app.kubernetes.io/instance: star-trek-quiz
    app.kubernetes.io/managed-by: Helm

spec:
  replicas: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: star-trek-quiz
      app.kubernetes.io/instance: star-trek-quiz

  template:
    metadata:
      labels:
        app.kubernetes.io/name: star-trek-quiz
        app.kubernetes.io/instance: star-trek-quiz

    spec:
      containers:
        - name: star-trek-quiz

          image: "dsohar/star-trek-quiz:latest"
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 5001
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - star-trek-quiz
                topologyKey: kubernetes.io/hostname
---
# Source: star-trek-quiz/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: star-trek-quiz-star-trek-quiz
  labels:
    app.kubernetes.io/name: star-trek-quiz
    app.kubernetes.io/instance: star-trek-quiz
    app.kubernetes.io/managed-by: Helm

spec:
  ingressClassName: nginx

  rules:
    - host: star-trek-quiz.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: star-trek-quiz-star-trek-quiz
                port:
                  number: 5001
